--- a/seleniumAutTestStockbit/.classpath
+++ b/seleniumAutTestStockbit/.classpath
@@ -90,5 +90,16 @@
 	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/selenium-java-4.1.2/lib/opentelemetry-semconv-1.10.1-alpha.jar"/>
 	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/selenium-java-4.1.2/lib/reactive-streams-1.0.3.jar"/>
 	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/selenium-java-4.1.2/lib/slf4j-api-1.7.35.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-jvm-deps-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-java-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-junit-1.2.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cobertura-2.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-reporting-0.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-core-1.2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/jar_files (1)/cucumber-html-0.2.3.jar"/>
+	<classpathentry kind="lib" path="/Users/th-1-000250/Downloads/cucumber-junit-1.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
